--- a/css/main.css
+++ b/css/main.css
@@ -274,7 +274,7 @@ h2, h3
 	font-size: 1.7em;
 	text-align: center;
 	margin: 0 0 2% 0;
-	padding-top: 5%;
+	padding-top: 11%;
 }
 
 .collapsible_1 h3 {
@@ -366,7 +366,6 @@ h2, h3
 
 .collapsible_2_content {
 	display: none;
- 	margin-top: 20px;
 }
 
 .collapsible_2_content.slideToggle {
@@ -380,7 +379,7 @@ h2, h3
 	background-position: center;
 	width: 100%;
 	height: 150px;
-	margin: 10% 0 10% 0;
+	margin: 10% 0 0 0;
 }
 
 .collapsible_3 h2 {
@@ -391,7 +390,7 @@ h2, h3
 	font-size: 1.7em;
 	text-align: center;
 	margin: 0 0 2% 0;
-	padding-top: 5%;
+	padding-top: 11%;
 }
 
 .collapsible_3 h3 {
@@ -425,7 +424,6 @@ h2, h3
 
 .collapsible_3_content {
 	display: none;
- 	margin-top: 20px;
 }
 
 .collapsible_3_content.slideToggle {
@@ -450,7 +448,7 @@ h2, h3
 	font-size: 1.7em;
 	text-align: center;
 	margin: 0 0 2% 0;
-	padding-top: 5%;
+	padding-top: 11%;
 }
 
 .collapsible_4 h3 {
@@ -480,15 +478,16 @@ h2, h3
 	margin-right: 5%;
 	padding-top: 5%;
 	padding-bottom: 5%;
+	margin-bottom: 5%;
 }
 
 .collapsible_4_content {
 	display: none;
- 	margin-top: 20px;
 }
 
 .collapsible_4_content.slideToggle {
  display: block;
+ margin-top: -10%;
 }
 
 /* Collapsible arrow */
@@ -1040,8 +1039,10 @@ h2, h3
 /* projects and events section */
 
 #projects_title {
-	font-family: arial, sans-serif;
-	font-size: 1.8em;
+	font-family: franklin-gothic-urw, sans-serif;
+	font-weight: 500;
+	font-style: normal;
+	font-size: 2em;
 	color: black;
 	margin: 10% 0 5% 0;
 	text-align: center;
@@ -1053,10 +1054,12 @@ h2, h3
 }
 
 #projects_content p {
-	font-family: arial, sans-serif;
+	font-family: franklin-gothic-urw, sans-serif;
+	font-weight: 400;
+	font-style: normal;
 	color: black;
 	text-align: justify;
-	line-height: 1em;
+	line-height: 1.2em;
 	font-size: 1.2em;
 	margin-left: 10%;
 }
@@ -1064,6 +1067,10 @@ h2, h3
 /* collapsible 1 bcg img*/
 .col_proj_bcg {
 	background-image: url(../images/projects-project_1.png);
+}
+
+#col_proj_img_1 {
+	padding-top: 5%;
 }
 
 /* collapsible 2 bcg img*/
