--- a/css/main.css
+++ b/css/main.css
@@ -1022,6 +1022,7 @@ h2, h3
 	height: auto;
 	flex-wrap: wrap;
 	margin-left: 5%;
+	margin-top: 5%;
 }
 
 #library_content img {
@@ -1036,16 +1037,18 @@ h2, h3
 }
 
 #add_content p {
-	font-family: arial, sans-serif;
+	font-family: franklin-gothic-urw, sans-serif;
+	font-weight: 400;
+	font-style: normal;
 	color: black;
 	text-align: justify;
-	line-height: 1em;
+	line-height: 1.2em;
 	font-size: 1.2em;
 	margin-left: 10%;
 }
 
 #add_content button {
-	width: 35%;
+	width: 38%;
 	height: auto;
 	background-color: darkolivegreen;
 	color: white;
